# OCRmyPDF_papermerge

./: .gitignore  LICENSE  MANIFEST.in  README.md  changelog.md  ocrmypdf_papermerge.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  tests.yml  version-bump.yml
ocrmypdf_papermerge/: custom_engine.py  generate_preview.py  generate_svg.py  hocr.py  image.py  plugin.py  render.py  utils.py
ocrmypdf_papermerge/templates/: page.html.j2  page.svg.j2
tests/: test_generate_preview.py  test_hocr.py  test_utils.py
