[metadata]
name = ocrmypdf-papermerge
version = 0.3.0
description = OCRmyPDF plugin to generate SVG files for Papermerge
long_description = file: README.md
url = https://github.com/papermerge/OCRmyPDF_papermerge
author = Eugen Ciur
author_email = eugen@papermerge.com
license = Apache 2.0 License
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
[options]
include_package_data = true

[pycodestyle]
max-line-length = 80
